--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
+@font-face {
+  font-family: "Anuphan";
+  src: url("https://cdn.jsdelivr.net/gh/lazywasabi/thai-web-fonts@7/fonts/Anuphan/Anuphan-Thin.woff2")
+    format("woff2");
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+}
+* {
+  font-family: Anuphan;
+}
 body {
   min-width: 600px !important;
+  font-family: "Anuphan";
+  src: url("https://cdn.jsdelivr.net/gh/lazywasabi/thai-web-fonts@7/fonts/Anuphan/Anuphan-Thin.woff2")
+    format("woff2");
 }
 
 button {
